Scrollbar fix

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1081,6 +1081,7 @@ font-size: 32px;
     width: 100%;
     overflow-y: scroll;
     padding-right: 20px;
+    left: 15px;
     -webkit-overflow-scrolling: touch;
 }
 
